--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "dependencies": {
     "@types/d3": "^4.11.0",
+    "@types/d3-array": "^1.2.1",
+    "@types/d3-axis": "^1.0.8",
+    "@types/d3-collection": "^1.0.4",
+    "@types/d3-color": "^1.0.4",
+    "@types/d3-ease": "^1.0.4",
     "@types/d3-interpolate": "^1.1.5",
     "@types/d3-scale": "^1.0.4",
+    "@types/d3-selection": "^1.1.0",
+    "@types/d3-transition": "^1.1.0",
     "@types/lodash": "^4.14.170",
     "@types/marked": "^2.0.3",
     "d3": "^4.11.0",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-collection": "^1.0.4",
+    "d3-color": "^1.0.3",
+    "d3-ease": "^1.0.3",
+    "d3-interpolate": "^1.1.5",
     "d3-scale": "^1.0.4",
+    "d3-selection": "^1.1.0",
+    "d3-transition": "^1.1.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
     "ts-loader": "^9.2.3",
