--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "d3-scale": "^1.0.4",
     "d3-selection": "^1.1.0",
     "d3-transition": "^1.1.0",
+    "inversify": "^5.1.1",
+    "inversify-binding-decorators": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
+    "reflect-metadata": "^0.1.13",
     "ts-loader": "^9.2.3",
     "typescript": "^4.2.2",
     "webpack": "^5.40.0",
