--- a/package.json
+++ b/package.json
@@ -4,19 +4,6 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
-    "@types/d3": "^4.11.0",
-    "@types/d3-array": "^1.2.1",
-    "@types/d3-axis": "^1.0.8",
-    "@types/d3-collection": "^1.0.4",
-    "@types/d3-color": "^1.0.4",
-    "@types/d3-ease": "^1.0.4",
-    "@types/d3-interpolate": "^1.1.5",
-    "@types/d3-scale": "^1.0.4",
-    "@types/d3-selection": "^1.1.0",
-    "@types/d3-shape": "^1.2.0",
-    "@types/d3-transition": "^1.1.0",
-    "@types/lodash": "^4.14.170",
-    "@types/marked": "^2.0.3",
     "d3": "^4.11.0",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
@@ -31,10 +18,25 @@
     "inversify-binding-decorators": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
-    "reflect-metadata": "^0.1.13",
+    "reflect-metadata": "^0.1.13"
+  },
+  "devDependencies": {
     "ts-loader": "^9.2.3",
     "typescript": "^4.2.2",
     "webpack": "^5.40.0",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "@types/d3": "^4.11.0",
+    "@types/d3-array": "^1.2.1",
+    "@types/d3-axis": "^1.0.8",
+    "@types/d3-collection": "^1.0.4",
+    "@types/d3-color": "^1.0.4",
+    "@types/d3-ease": "^1.0.4",
+    "@types/d3-interpolate": "^1.1.5",
+    "@types/d3-scale": "^1.0.4",
+    "@types/d3-selection": "^1.1.0",
+    "@types/d3-shape": "^1.2.0",
+    "@types/d3-transition": "^1.1.0",
+    "@types/lodash": "^4.14.170",
+    "@types/marked": "^2.0.3"
   }
 }
