--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "webpack",
+    "build:production": "webpack -c webpack.prod.js",
     "watch": "webpack --watch"
   },
   "dependencies": {
@@ -18,9 +19,7 @@
     "inversify-binding-decorators": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
-    "reflect-metadata": "^0.1.13"
-  },
-  "devDependencies": {
+    "reflect-metadata": "^0.1.13",
     "ts-loader": "^9.2.3",
     "typescript": "^4.2.2",
     "webpack": "^5.40.0",
