--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,9 +44,10 @@ jobs:
         ssh-keyscan github.com >> ~/.ssh/known_hosts
         git config --global user.email "smczx@hotmail.com"
         git config --global user.name "ControlNet"
+        git remote add origin-ssh git@github.com:ControlNet/wt-data-project.web.git
 
     - name: Commit and push
       run: |
         git add -A
         git commit -m "update"
-        git push origin web -f
+        git push origin-ssh HEAD:web -f
