--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,11 +38,15 @@ jobs:
         mv logo.ico img
         mv logo64.png img
         sed -i 's/dist//g' .gitignore
-        sed -i 's/data//g' .gitignore
+        sed -i 's/\/data//g' .gitignore
 
     - name: Download data
       run: |
-        git clone https://github.com/ControlNet/wt-data-project.data.git data
+        git clone --depth 1 https://github.com/ControlNet/wt-data-project.data.git data
+        cd data
+        ls -al
+        chmod 777 -R .git
+        rm -R .git
 
     - name: Init git and commit
       env:
