--- a/wasm-utils/Cargo.toml
+++ b/wasm-utils/Cargo.toml
@@ -11,8 +11,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
-serde = { version = "1.0.144", features = ["derive"] }
+wasm-bindgen = { version = "0.2.63" }
 js-sys = "0.3.59"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
