--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "watch": "webpack --watch"
   },
   "dependencies": {
-    "wasm-utils": "file:wasm-utils/pkg",
     "d3": "^4.11.0",
     "d3-array": "^1.2.1",
     "d3-axis": "^1.0.8",
@@ -20,11 +19,11 @@
     "inversify-binding-decorators": "^4.0.0",
     "lodash": "^4.17.21",
     "marked": "^2.0.3",
-    "reflect-metadata": "^0.1.13",
-    "ts-loader": "^9.2.3",
     "typescript": "^4.2.2",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
+    "wasm-utils": "file:wasm-utils/pkg"
+  },
+  "devDependencies": {
     "@types/d3": "^4.11.0",
     "@types/d3-array": "^1.2.1",
     "@types/d3-axis": "^1.0.8",
@@ -37,6 +36,9 @@
     "@types/d3-shape": "^1.2.0",
     "@types/d3-transition": "^1.1.0",
     "@types/lodash": "^4.14.170",
-    "@types/marked": "^2.0.3"
+    "@types/marked": "^2.0.3",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.2.0",
+    "ts-loader": "^9.2.3"
   }
 }
