--- a/package.json
+++ b/package.json
@@ -1,44 +1,37 @@
 {
+  "name": "wt-data-project.web.vue",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "build": "webpack",
-    "build:production": "webpack -c webpack.prod.js",
-    "watch": "webpack --watch"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "test:unit": "vitest --environment jsdom --root src/",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
-    "d3": "^4.11.0",
-    "d3-array": "^1.2.1",
-    "d3-axis": "^1.0.8",
-    "d3-collection": "^1.0.4",
-    "d3-color": "^1.0.3",
-    "d3-ease": "^1.0.3",
-    "d3-interpolate": "^1.1.5",
-    "d3-scale": "^1.0.4",
-    "d3-selection": "^1.1.0",
-    "d3-transition": "^1.1.0",
-    "inversify": "^5.1.1",
-    "inversify-binding-decorators": "^4.0.0",
-    "lodash": "^4.17.21",
-    "marked": "^2.0.3",
-    "typescript": "^4.2.2",
-    "reflect-metadata": "^0.1.13",
-    "wasm-utils": "file:wasm-utils/pkg"
+    "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "element-plus": "^2.2.26",
+    "pinia": "^2.0.28",
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/d3": "^4.11.0",
-    "@types/d3-array": "^1.2.1",
-    "@types/d3-axis": "^1.0.8",
-    "@types/d3-collection": "^1.0.4",
-    "@types/d3-color": "^1.0.4",
-    "@types/d3-ease": "^1.0.4",
-    "@types/d3-interpolate": "^1.1.5",
-    "@types/d3-scale": "^1.0.4",
-    "@types/d3-selection": "^1.1.0",
-    "@types/d3-shape": "^1.2.0",
-    "@types/d3-transition": "^1.1.0",
-    "@types/lodash": "^4.14.170",
-    "@types/marked": "^2.0.3",
-    "webpack": "^5.40.0",
-    "webpack-cli": "^4.2.0",
-    "ts-loader": "^9.2.3"
+    "@types/jsdom": "^20.0.1",
+    "@types/node": "^18.11.12",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vue/test-utils": "^2.2.6",
+    "@vue/tsconfig": "^0.1.3",
+    "jsdom": "^20.0.3",
+    "npm-run-all": "^4.1.5",
+    "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.12.1",
+    "unplugin-vue-components": "^0.22.12",
+    "vite": "^4.0.0",
+    "vitest": "^0.25.6",
+    "vue-tsc": "^1.0.12"
   }
 }
