--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "d3": "^7.7.0",
     "element-plus": "^2.2.26",
+    "inversify": "^6.0.1",
+    "inversify-binding-decorators": "^4.0.0",
     "pinia": "^2.0.28",
+    "vite-plugin-wasm": "^3.1.0",
     "vue": "^3.2.45",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0",
+    "wasm-utils": "file:src/d3/wasm-utils/pkg"
   },
   "devDependencies": {
     "@types/jsdom": "^20.0.1",
@@ -32,6 +38,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^4.0.0",
     "vitest": "^0.25.6",
-    "vue-tsc": "^1.0.12"
+    "vue-tsc": "^1.0.12",
+    "wasm-utils": "file:src/d3/wasm-utils/pkg"
   }
 }
