--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.8.1",
+    "csv": "^6.2.5",
     "d3": "^7.7.0",
     "element-plus": "^2.2.26",
     "inversify": "^6.0.1",
