--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,12 @@
 {
+  "compilerOptions": {
+    "strict": true,
+    "target": "es6",
+    "noImplicitAny": true,
+    "sourceMap": true,
+    "lib": ["es5", "es6", "es2019", "dom"],
+    "experimentalDecorators": true
+  },
   "files": [],
   "references": [
     {
