--- a/package.json
+++ b/package.json
@@ -1,41 +1,50 @@
 {
-  "name": "wt-data-project.web.vue",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check build-only",
-    "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
-  },
-  "dependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.8.1",
-    "d3": "^7.7.0",
-    "element-plus": "^2.2.26",
-    "marked": "^4.2.4",
-    "pinia": "^2.0.28",
-    "vite-plugin-wasm": "^3.1.0",
-    "vue": "^3.2.45",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6",
-    "wasm-utils": "file:wasm-utils/pkg"
-  },
-  "devDependencies": {
-    "@types/d3": "^7.4.0",
-    "@types/jsdom": "^20.0.1",
-    "@types/node": "^18.11.12",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "@vue/test-utils": "^2.2.6",
-    "@vue/tsconfig": "^0.1.3",
-    "jsdom": "^20.0.3",
-    "npm-run-all": "^4.1.5",
-    "typescript": "~4.9.4",
-    "unplugin-auto-import": "^0.12.1",
-    "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
-  }
+    "name": "wt-data-project.web.vue",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite",
+        "build": "run-p type-check build-only",
+        "preview": "vite preview",
+        "test:unit": "vitest --environment jsdom --root src/",
+        "build-only": "vite build",
+        "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+        "lint": "eslint \"src/**/*.{js,ts,vue}\""
+    },
+    "dependencies": {
+        "@intlify/unplugin-vue-i18n": "^0.8.1",
+        "d3": "^7.7.0",
+        "element-plus": "^2.2.26",
+        "marked": "^4.2.4",
+        "pinia": "^2.0.28",
+        "vite-plugin-wasm": "^3.1.0",
+        "vue": "^3.2.45",
+        "vue-i18n": "^9.2.2",
+        "vue-router": "^4.1.6",
+        "wasm-utils": "file:wasm-utils/pkg"
+    },
+    "devDependencies": {
+        "@types/d3": "^7.4.0",
+        "@types/jsdom": "^20.0.1",
+        "@types/node": "^18.11.12",
+        "@typescript-eslint/eslint-plugin": "^5.47.0",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "@vitejs/plugin-vue-jsx": "^3.0.0",
+        "@vue/eslint-config-typescript": "^11.0.2",
+        "@vue/test-utils": "^2.2.6",
+        "@vue/tsconfig": "^0.1.3",
+        "eslint": "^8.30.0",
+        "eslint-config-standard-with-typescript": "^24.0.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-n": "^15.6.0",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-vue": "^9.8.0",
+        "jsdom": "^20.0.3",
+        "npm-run-all": "^4.1.5",
+        "typescript": "^4.9.4",
+        "unplugin-auto-import": "^0.12.1",
+        "unplugin-vue-components": "^0.22.12",
+        "vite": "^4.0.0",
+        "vue-tsc": "^1.0.12"
+    }
 }
