--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint-plugin-vue": "^9.8.0",
         "jsdom": "^20.0.3",
         "npm-run-all": "^4.1.5",
+        "sass": "^1.57.1",
         "typescript": "^4.9.4",
         "unplugin-auto-import": "^0.12.1",
         "unplugin-vue-components": "^0.22.12",
